added the rest of the functionality
hopefully works

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,11 @@
 .blue {
     background-color: rgb(103, 155, 197);
 }
+
+.text-outline {
+    -webkit-text-stroke: 1px rgb(82, 82, 82);
+}
+
+.font-arial {
+    font-family: 'Arial Black', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
